--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,6 +5,10 @@
     width: 100%;
     background-color: rgb(0, 220, 244);
     color: white;
-    text-align: center;
+    text-align: left;
     margin-top: 110px;
+ }
+
+ .text{
+    text-align: center;
  }
