--- a/src/components/tours/tour/Tour.css
+++ b/src/components/tours/tour/Tour.css
@@ -7,25 +7,24 @@
     background-color: #d5ebfd;
     padding: 10px; */
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    /* grid-rows: 1fr 1fr; */
     row-gap: 10px;
     column-gap: 10px;
     /* justify-items: stretch; */
+    flex-wrap: wrap;
    
   }
   
   .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
     font-size: 10px;
     text-align: center;
-    
-    
   }
   
   .space{
-      padding-bottom:150px ;}
+      padding-bottom:70px ;
+    }
   
       img{
           width: 200px;
